Fix shadow overlap between sections (#1247)

--- a/assets/base.css
+++ b/assets/base.css
@@ -253,6 +253,11 @@ html.no-js .no-js-hidden {
   }
 }
 
+.isolate {
+  position: relative;
+  z-index: 0;
+}
+
 .section + .section {
   margin-top: var(--spacing-sections-mobile);
 }
