--- a/assets/collage.css
+++ b/assets/collage.css
@@ -5,8 +5,6 @@
 
 .collage {
   display: grid;
-  position: relative;
-  z-index: 0;
 }
 
 .collage__item > * {
