--- a/assets/section-collection-list.css
+++ b/assets/section-collection-list.css
@@ -1,8 +1,3 @@
-.collection-list-wrapper {
-  position: relative;
-  z-index: 0;
-}
-
 .collection-list {
   margin-top: 0;
   margin-bottom: 0;
